# tokamind

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  requirements.txt
docs/: checkpointing_and_warmstart.md  config_guide.md  config_reference.md  datasets.md  evaluation.md  model_architecture.md  model_flexibility.md  transforms.md  tuning_dct3d.md  tuning_embeddings.md
scripts_mast/: run_eval.py  run_finetune.py  run_pretrain.py  run_tune_dct3d.py
scripts_mast/configs/common/: core.yaml  embeddings.yaml  eval.yaml  finetune.yaml  pretrain.yaml  tune_dct3d.yaml
scripts_mast/configs/common/dct3d_indices/: input_magnetics-b_field_pol_probe_ccbv_field.npy  input_magnetics-b_field_pol_probe_obr_field.npy  input_magnetics-b_field_pol_probe_obv_field.npy  input_magnetics-b_field_tor_probe_cc_field.npy  input_magnetics-b_field_tor_probe_saddle_voltage.npy  input_magnetics-flux_loop_flux.npy  input_pf_active-coil_current.npy  input_soft_x_rays-horizontal_cam_upper.npy  input_spectrometer_visible-filter_spectrometer_dalpha_voltage.npy
scripts_mast/configs/local_tasks_def/: _test.yaml  pretrain_all_to_inputs_outputs.yaml  pretrain_inputs_actuators_to_inputs_outputs.yaml  pretrain_inputs_actuators_to_outputs.yaml
scripts_mast/configs/pretrain_global/: _test.yaml  embeddings_default.yaml  experiment_base.yaml  pretrain_all_to_inputs_outputs.yaml  pretrain_default.yaml  pretrain_inputs_actuators_to_inputs_outputs.yaml  pretrain_inputs_actuators_to_outputs.yaml  pretrain_task_all_to_inputs_outputs.yaml
scripts_mast/configs/task_2-1/: embeddings_tuned.yaml  eval_default.yaml  finetune_default.yaml  tune_dct3d.yaml
scripts_mast/configs/tasks/_test/: embeddings_overrides.yaml  eval_overrides.yaml  task.yaml
scripts_mast/configs/tasks/pretrain_all_to_inputs_outputs/: pretrain_overrides.yaml  task.yaml
scripts_mast/configs/tasks/pretrain_inputs_actuators_to_inputs_outputs/: pretrain_overrides.yaml  task.yaml
scripts_mast/configs/tasks/pretrain_inputs_actuators_to_outputs/: task.yaml  (+1 more)
scripts_mast/mast_utils/: __init__.py  benchmark_eval.py  benchmark_imports.py  config_loader.py  embedding_resolution.py  entry_helpers.py  entry_script_helpers.py  eval_benchmark.py  pipeline_helpers.py  pipeline_ops.py  task_config.py  task_definition.py  task_signals.py  tune_dct3d.py
scripts_mast/mast_utils/config/: __init__.py  cli_overrides.py  finalize.py  ids.py  inheritance.py  loader.py  merge.py
src/mmt/: __init__.py  constants.py
src/mmt/checkpoints/: __init__.py  api.py  blocks.py  io.py  rng.py  warmstart.py
src/mmt/data/: __init__.py  baseline_bridge.py  cache_tokens.py  collate.py  data_loaders.py  datasets.py  signal_spec.py
src/mmt/eval/: __init__.py  decode.py  forward.py  metrics.py
src/mmt/examples/: toy_train.py
src/mmt/models/: __init__.py  backbone.py  mmt.py  modality_heads.py  output_adapters.py  token_encoder.py  trunk.py
src/mmt/scripts/: run_eval.py  run_finetune.py  run_pretrain.py  run_tune_dct3d.py  test.py  tune_dct3d.py
src/mmt/train/: __init__.py  checkpoint_io.py  evaluation.py  loop.py  loop_utils.py  losses.py  scheduler.py
src/mmt/training/: amp_utils.py  checkpoint_io.py  config_validation.py  loop.py  loop_utils.py  losses.py  scheduler.py
src/mmt/utils/: __init__.py  amp_utils.py  config_loader.py  data_init.py  data_loaders.py  logger.py  logging.py  mmt_init_data.py  paths.py  seed.py
(+225 files in other folders)
