[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-modal-transformer"
version = "0.1.0"
description = "Multi-modal transformer for plasma fusion models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }  # or whatever you choose later
authors = [
  { name = "XXX" }
]

#[project.urls]
#"Homepage" = "https://github.com/youruser/multi-modal-transformer"
#"Bug Tracker" = "https://github.com/youruser/multi-modal-transformer/issues"

classifiers = [
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
#  "Operating System :: OS Independent",
]

# We deliberately do NOT list torch/numpy/etc here, because we assume
# they come from the baseline repo environment.
# Otherwise, you can populate the dependencies field
dependencies = [
#    "torch>=2.2",
    "google_crc32>=1.7",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
#  "black>=24.0",
#  "pytest>=8.0",
#  "mypy>=1.10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mmt*"]
