[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tokamind"
version = "0.1.0"
description = "Multi-modal transformer for plasma fusion models"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }  # or whatever you choose later
authors = [
  { name = "XXX" }
]

#[project.urls]
#"Homepage" = "https://github.com/youruser/multi-modal-transformer"
#"Bug Tracker" = "https://github.com/youruser/multi-modal-transformer/issues"

classifiers = [
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
#  "Operating System :: OS Independent",
]

# We deliberately do NOT list torch/numpy/etc here, because we assume
# they come from the benchmark repo environment.
# Otherwise, you can populate the dependencies field
dependencies = [
    "torch>=2.10",
    "numpy>=2.4",
    "PyYAML>=6.0",
    "psutil>=7.2",
    "scipy>=1.17",
]

[project.optional-dependencies]
dev = [
#  "ruff>=0.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mmt*"]
