[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tokamind"
version = "0.1.0"
description = "Multi-modal transformer for plasma fusion models"
readme = "README.md"
requires-python = ">=3.11"
license-files = ["LICENSE.md"]  # TODO: Update LICENSE.md with the appropiate license
authors = [
  { name = "XXX" }
]

#[project.urls]
#"Homepage" = "https://github.com/youruser/multi-modal-transformer"

classifiers = [
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research",
  "License :: OpenMDW",
#  "Operating System :: OS Independent",
]

dependencies = [
    "torch>=2.10",
    "numpy>=2.4",
    "PyYAML>=6.0",
    "psutil>=7.2",
    "scipy>=1.17",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.8",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 120

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mmt*"]
